vault/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-ui
  namespace: hashicorp-vault
  labels:
    helm.sh/chart: vault-0.7.0
    app.kubernetes.io/name: vault-ui
    app.kubernetes.io/instance: vault
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
    component: server
  publishNotReadyAddresses: true
  ports:
    - name: http
      port: 80
      targetPort: 8200
  type: ClusterIP
